--- a/PagInicial/menu.css
+++ b/PagInicial/menu.css
@@ -20,14 +20,18 @@
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
 }
+.inicio{
+  opacity: 0;   
+}
 .abrir{
     opacity: 1;
     animation: abrir 0.5s;
 }
 .fechado{
     opacity: 0;
-   animation: fechar 1s;
+    animation: fechar 1s;
 }
+
 #menu-escondido li:hover{
     border: 1px solid;
     border-left: none;
