--- a/PagInicial/menu.css
+++ b/PagInicial/menu.css
@@ -1,19 +1,19 @@
 #nav-menu{
-    top: 20px;
+    top: 30px;
     padding-top: 10px;
     padding-right: 10px;
     padding-bottom: 10px;
     border-top-right-radius: 5%;
 
 }
-#menu-escondido li{
+#menu-escondido .li-normal{
     list-style: none;
     padding: 10px;
     margin-top: 5px;
     cursor: default;
 }
 #menu-escondido{
-    padding: 0px 13px 0px 0px;
+    padding: 15px 13px 0px 0px;
     background-color: rgb(211, 211, 211);
     z-index: 10000;
     border-top-left-radius: 10px;
@@ -21,7 +21,7 @@
 }
 
 
-#menu-escondido li:hover{
+#menu-escondido .li-normal:hover{
     border: 1px solid;
     border-left: none;
     border-top-right-radius: 15px;
@@ -33,7 +33,19 @@
     cursor: pointer;
 }
 #up-li{
-  border-top-left-radius: 14%;
+  text-align: center;
+  border-radius: 50px;
+  height: 70px;
+  width: 70px;
+  border:1px solid; 
+  margin: auto;
+  list-style: none;
+  margin-bottom: 8px;
+}
+#up-li img{
+    height: 70px;
+    width: 70px;
+    border-radius:50px ;
 }
 #bottom-li{
   border-bottom-left-radius: 14%;
