--- a/PagInicial/footer.css
+++ b/PagInicial/footer.css
@@ -16,6 +16,7 @@ footer{
     position: absolute;
     position: fixed;
     bottom: 0px;
+    background-color: red;
 }
 .icon-footer-acima{
     position: absolute;
@@ -34,6 +35,10 @@ footer{
     justify-content: center;
     align-items: center;
     border-radius:50px ;
+}
+.icon-footer-acima:hover{
+    background-color: gray;
+    transition: 0.2s ease-in-out;
 }
 .footer-icon{
     position: absolute;
