--- a/PagInicial/header.css
+++ b/PagInicial/header.css
@@ -8,12 +8,10 @@ body, html{
    
     box-sizing: border-box;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    min-height: 100vh;
-    min-width: 100vw;
+    height: 100vh;
+    width: 100vw;
 }
-body{
-    overflow-y: hidden;
-}
+
 header{
     border: 2px solid rgb(138, 136, 136);
     border-top: none;
@@ -62,8 +60,7 @@ main{
     height: calc(100vh - 210px);
     padding-top: 100px;
     background-color:white;
-    overflow-y: auto !important;
-    -webkit-overflow-scrolling: touch;
+ 
 }
 span{
     user-select: none;
