--- a/PagInicial/header.css
+++ b/PagInicial/header.css
@@ -9,7 +9,7 @@ body, html{
     box-sizing: border-box;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
 }
 
 header{
@@ -18,7 +18,7 @@ header{
     border-left: none;
     border-right:none;
     position: fixed;
-   background-color: white;
+    background-color: white;
     width: 100%;
     box-shadow: 0.5px 0.5px 0.2px rgba(0, 0, 0, 0.514);
 
@@ -56,8 +56,8 @@ header > menu > nav > ul > li{
     margin-left:  20px;
 }
 main{
-    min-width: 100vw;
-    height: calc(100vh - 210px);
+    min-width: 100%;
+    height: 100%;
     padding-top: 100px;
     background-color:white;
  
