--- a/PagInicial/Chat.css
+++ b/PagInicial/Chat.css
@@ -38,7 +38,7 @@ body,html{
     justify-content: center;
     align-items: center;
 }
-.div-chat:hover, .div-grupo:hover{
+.div-chat{
     border-bottom: 2px solid blue;
 }
 .div-chat{
@@ -58,4 +58,12 @@ body,html{
 }
 .foto-e-nome{
   display: flex;
+}
+#sms{
+    margin-top:22px;
+    margin-left: 11px;
+   user-select: none;
+   opacity: 0.5;
+   font-size: 14px;
+
 }
